[project]
name = "findIt-mcp"
version = "0.1.0"
description = "Advanced web search and content extraction tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.7",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.12.0",
]
